<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LawAPP</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="fugui_fast_check">财经法规快查</string>
    <string name="yes">是</string>
   <string name="no">否 </string>
    <string name="first_page">首页</string>
    <string name="feilei">分类</string>
    <string name="shousuo">搜索</string>
    <string name="xizai">下载</string>
    <string name="shouchang">收藏</string>
       <string name="myshouchang">我的收藏</string>
    <string name="gengduo">更多</string>
    <string name="new_fagui">最新法规</string>
    <string name="hot_fagui">热门法规</string>
    <string name="native_fagui">本地法规</string>
    <string name="shishi_fagui">本月实施法规</string>
    <string name="shixiao_fagui">本月失效法规</string>
    <string name="fadui_detial">法规详情</string>
    <string name="fawen_wenhao">发文文号:</string>
    <string name="fawen_bumen">发文部门:</string>
    <string name="fawen_time">发文时间:</string>
    <string name="fawen_hangye">所属行业:</string>
    <string name="fawen_style">法律类型:</string>
    <string name="fawen_start_time">实施时间:</string>
    <string name="fawen_bianji_time">编辑时间:</string>
    <string name="commend_edt">说点什么吧！！！</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="tencetweibo">腾讯微博</string>
    <string name="weixin">微新好友</string>
    <string name="weixin_friend">微信朋友圈</string>
    <string name="cancel">取消</string>
    <string name="zhiti_size">字体大小</string>
    <string name="g2g3">2G/3G环境下下载提醒   </string>
    <string name="tuisong">推送通知</string>
    <string name="save_success">收藏成功</string>
    <string name="save_fail">收藏失败</string>
    <string name="uploading">提交</string>
    <string name="fagui_shuifei">法规税费</string>
    <string name="fagui_kuaiji">会计法规      </string>
    <string name="fagui_caiwu">财务法规         </string>
    <string name="fagui_shenji">独立审计     </string>
    <string name="fagui_shuiwu">税务代理      </string>
    <string name="fagui_pinggu">评估估价       </string>
    <string name="fagui_nbshenji">内部审计  </string>
    <string name="fagui_zunzhe">海外准则  </string>
    <string name="fagui_gongshang">工商行政管理   </string>
    <string name="fagui_haiguan">海关        </string>
    <string name="fagui_jichu">基础法规  </string>
    <string name="fagui_jinrong">金融证券  </string>
    <string name="fagui_waihui">外汇管理  </string>
    <string name="fagui_zhengfu">政府审计   </string>
    <string name="fagui_caijing">财经相关法律法规        </string>
    <string name="fagui_shenjiaosuo">深交所    </string>
    <string name="fagui_guozhiguanli">国资管理      </string>
    <string name="fagui_feizhi">文件废止公告  </string>
    <string name="commend">评论  </string>
    <string name="send">发送  </string>
    <string name="fagui_type">法规分类  </string>
    <string name="commend_success">评论成功！！！ </string>
    <string name="commend_fail">评论失败！！！ </string>
    <string name="fagui_list">法规列表 </string>
    <string name="search_content">搜索结果</string>
    <string name="zhifu_message">下载本目录的法规需要XX金币，是否确认支付?</string>
    <string name="my_xizai">我的下载</string>
      <string name="delete">删除</string>
      <string name="login">登陆</string>
      <string name="regester">注册</string>
       <string name="forget_psw">忘记密码</string>
       <string name="update_psw">密码修改</string>
     <string name="about_us">关于我们</string>
     <string name="suggest_back">意见反馈</string>
      <string name="fagui_error">法规错误</string>
       <string name="fagui_out">法规遗漏</string> 
       <string name="fagui_bug">程序BUG</string>
        <string name="fagui_suggest">程序功能建议</string>
            <string name="title_activity_return">ReturnActivity</string>
            <string name="fagui_img_unexist">图片不存在</string>
             <string name="my_center">个人中心</string>
               <string name="my_setting">设置</string>
               <string name="my_help">使用帮助</string>
                 <string name="layout_title">提示</string> 
  <string name="layout_body">确定要退出动漫阅读器吗</string> 
  <string name="submit">确定</string> 
  <string name="cancle">取消</string> 
               
</resources>