<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/body_bg_2x11" >
  
  <include 
     android:id="@+id/detail_head_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     layout="@layout/law_detail_head"
     android:layout_alignParentTop="true"
      />  

<LinearLayout
    android:layout_below="@id/detail_head_layout" 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="10sp"
     android:layout_marginRight="10sp"
     android:orientation="vertical"   
     android:background="@drawable/body_bg_2x157"
    >
       <TextView 
       android:id="@+id/law_detail_title"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"  
     android:textSize="25sp"
     android:textColor="#666633"
     android:text="标题"
      
       />
    
    <LinearLayout 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"     
        >
    <LinearLayout 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"  
     android:layout_marginTop="30sp"  
        >

   <LinearLayout 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginLeft="10sp"
     android:orientation="horizontal"    
       >

       <TextView 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"  
     android:text="@string/fawen_wenhao" 
     android:textSize="20sp"
      android:textColor="#CC9933"
           />
           <TextView 
     android:id="@+id/fawen_wenhao_txt"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"  
     android:text="XXXXXXX" 
     android:textSize="20sp"
      android:textColor="#CC9933"
           />   
   </LinearLayout>
      <LinearLayout 
       android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginLeft="10sp"
     android:orientation="horizontal"    
       >
       <TextView 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"  
     android:text="@string/fawen_bumen"
      android:textSize="20sp"
      android:textColor="#CC9933"
           />
           <TextView 
                    android:id="@+id/fawen_bumen_txt"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"  
     android:text="XXXXXXX" 
     android:textSize="20sp"
      android:textColor="#CC9933"
           />   
   </LinearLayout>
      <LinearLayout 
   android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginLeft="10sp"
     android:orientation="horizontal"    
       >
       <TextView 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"  
     android:text="@string/fawen_time"
     android:textSize="20sp"
      android:textColor="#CC9933"
           />
           <TextView
      android:id="@+id/fawen_time_txt" 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"  
     android:text="XXXXXXX"
        android:textSize="20sp"
      android:textColor="#CC9933" 
           />   
   </LinearLayout>
   
         <LinearLayout 
   android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginLeft="10sp"
     android:orientation="horizontal"    
       >
       <TextView 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"  
     android:text="@string/fawen_hangye" 
       android:textSize="20sp"
      android:textColor="#CC9933"
           />
           <TextView 
                    android:id="@+id/fawen_hangye_txt"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"  
     android:text="XXXXXXX" 
      android:textSize="20sp"
      android:textColor="#CC9933"
           />
   </LinearLayout>
      <LinearLayout 
   android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginLeft="10sp"
     android:orientation="horizontal"   
      android:textSize="20sp"
      android:textColor="#CC9933"
       >
       <TextView 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"  
     android:text="@string/fawen_style" 
        android:textSize="20sp"
      android:textColor="#CC9933"
           />
           <TextView 
                    android:id="@+id/fawen_style_txt"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"  
     android:text="XXXXXXX" 
       android:textSize="20sp"
      android:textColor="#CC9933"
           />   
   </LinearLayout>
      <LinearLayout 
   android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginLeft="10sp"
     android:orientation="horizontal"    
       >
       <TextView 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"  
     android:text="@string/fawen_start_time" 
         android:textSize="20sp"
      android:textColor="#CC9933"
           />
           <TextView 
                    android:id="@+id/start_time_txt"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"  
     android:text="XXXXXXX" 
            android:textSize="20sp"
      android:textColor="#CC9933"
           />   
   </LinearLayout>
      <LinearLayout 
   android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginLeft="10sp"
     android:orientation="horizontal"    
       >
       <TextView 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"  
     android:text="@string/fawen_bianji_time" 
            android:textSize="20sp"
      android:textColor="#CC9933"
           />
           <TextView 
     android:id="@+id/bianji_time_txt"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"  
     android:text="XXXXXXX"  
        android:textSize="20sp"
      android:textColor="#CC9933"
               /> 
   </LinearLayout>
   </LinearLayout>
      <ImageView
     android:id="@+id/fawen_shixiao_img"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginLeft="50sp"
     android:src="@drawable/body_bg_2x144"
     android:visibility="gone"   
         />
   </LinearLayout>
   <ScrollView 
    android:layout_below="@id/detail_head_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" 
     android:scrollbars="vertical"
     android:layout_marginTop="20sp" >
      <LinearLayout 
     android:layout_width="match_parent"
     android:layout_height="wrap_content" 
     android:orientation="vertical"   
          >
   <TextView 
     android:id="@+id/fawen_detail_txt"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="20sp"
     android:text="sssssssssssssssssss"  
     android:textColor="#999966" 
     android:textSize="20sp"   
       />
   </LinearLayout>
   </ScrollView>
</LinearLayout>
    

</RelativeLayout>