<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/body_bg_2x11">
    <include 
     android:id="@+id/detail_head_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     layout="@layout/law_detail_head"
     android:layout_alignParentTop="true"
      />   
    <RelativeLayout
        android:layout_marginTop="10sp" 
     android:layout_width="match_parent"
     android:layout_height="60sp" 
     android:layout_marginLeft="10sp"
     android:layout_marginRight="10sp"
     android:background="@drawable/body_bg_2x152"  
     android:layout_gravity="center"  >
  <TextView 
     android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:text="@string/zhiti_size"
    android:textSize="20sp"  
    android:textColor="#333333" 
    android:gravity="center"
      />

    <TextView 
     android:id="@+id/zhiti_size_txt"
     android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:text="中"  
    android:textColor="#333333"  
    android:textSize="20sp"
    android:gravity="center"    
        />  
    </RelativeLayout>
    <RelativeLayout 
       android:layout_width="match_parent"
     android:layout_height="60sp" 
     android:layout_marginLeft="10sp"
     android:layout_marginRight="10sp"
     android:background="@drawable/body_bg_2x149"  
     android:layout_gravity="center"  
        >
       <TextView
          android:id="@+id/g2g3_txt"
     android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:text="@string/g2g3"
    android:textSize="20sp"  
    android:textColor="#333333" 
    android:gravity="center"
      />

       <com.cn.law.util.SlipButton3
           android:id="@+id/slipbtn2g3g1"
           android:layout_width="100sp"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:layout_alignParentTop="true" />

    </RelativeLayout>
       <RelativeLayout 
       android:layout_width="match_parent"
     android:layout_height="60sp" 
     android:layout_marginLeft="10sp"
     android:layout_marginRight="10sp"
     android:background="@drawable/body_bg_2x149"  
     android:layout_gravity="center"  
        >
       <TextView
          android:id="@+id/tuisong_txt"
     android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:text="@string/tuisong"
    android:textSize="20sp"  
    android:textColor="#333333" 
    android:gravity="center"
      />

       <com.cn.law.util.SlipButton3
           android:id="@+id/slipbtn2g3g2"
           android:layout_width="100sp"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:layout_alignParentTop="true" />

    </RelativeLayout> 
</LinearLayout>